--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .div{
 background-color: green;
 color: cadetblue;
-border: 3px solid black;
+border: 3px solid red;
 margin: 30px;
 padding: 50px;
 }
