--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .div{
 background-color: green;
 color: blueviolet;
-border: 3px solid red;
+border: 3px solid aquamarine;
 margin: 30px;
 padding: 50px;
 }
