--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .div{
 background-color: green;
 color: blueviolet;
-border: 3px solid rgb(249, 255, 127);
+border: 3px solid yellow;
 margin: 30px;
 padding: 50px;
 }
